--- a/CSS/Day1.html
+++ b/CSS/Day1.html
@@ -84,7 +84,8 @@
     <p class="word3">crosshair</p>
     <p class="word4">default</p>
     <p class="word5">e-resize</p>
-    <p class="word6">help</p>
+    <p class="word6">help</p><br>
+    <img src="/Qualminds-Training/SoftCopy.jpg" alt="Not present" srcset="" width="500px" height="300px">
     <!-- <p class="word7">move</p><br>
     <p class="word8">n-resize</p><br> 
     <p class="word9">ne-resize</p><br>
@@ -221,8 +222,11 @@
             <td>42458</td>
             <td>50000</td>
         </tr>
-    </table>
-
+    </table><br>
+    <div class="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis soluta vel ab tenetur corrupti officiis velit, itaque, provident architecto libero dolor minima expedita quae. Libero minus ex natus vel nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quae, voluptates dicta est, mollitia repellendus quia officiis dolorum velit illo ex nostrum aut tempore animi sed cumque, ab dignissimos eaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, sequi iure hic itaque deleniti eligendi, veritatis possimus sunt, nostrum unde voluptas accusantium quae iusto minima voluptatum assumenda culpa aspernatur similique suscipit sapiente? Corporis itaque repellendus accusamus praesentium libero deleniti nulla necessitatibus sapiente, unde quo explicabo, rem, vel distinctio? Velit eum quis tempora perferendis animi voluptatibus temporibus magnam recusandae alias, voluptatum quae fugiat dolore tenetur veniam voluptates, expedita ipsa? Ad, ullam veniam! Enim provident id ab molestias, vero porro dolorem a velit nisi quae, ex nulla doloribus amet asperiores quo architecto nobis voluptatem officiis, tenetur suscipit. Voluptatem, maiores. Eaque, minima nemo!</div><br>
+    <div class="div1">Div1</div>
+    <div class="div2">Div2</div>
+    <div class="div3">Div3</div>
 </body>
 
 </html>
