--- a/CSS/Navigate.html
+++ b/CSS/Navigate.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="navigate.css">
 </head>
 <body>
-    <p class="pooo">Welcome to first Assignment <span>which</span> i have tried my best</p>
+    <p class="pooo">Welcome to my first <span>Assignment</span> in which i have done my best-----</p>
 
     <ul class="nav">
-        <li><a href="http://127.0.0.1:5500/FirstDay.html" target="_blank">Home</a></li>
-        <li><a href="#home">About Us</a></li>
-        <li><a href="#home">Our Client</a></li>
-        <li><a href="#home">Contact Us</a></li>
+        <li><a href="http://127.0.0.1:5500/FirstDay.html" target="_blank" title="Click to go Home">Home</a></li>
+        <li><a href="#home" title="Click to know more">About Us</a></li>
+        <li><a href="#home" title="Click to know about client">Our Client</a></li>
+        <li><a href="#home" title="Click to contact us">Contact Us</a></li>
     </ul><br>
     <div title="wait for a second" class="highlight1">Qualminds is the best company to be a skilled Person.......<p class="pooo1">Good Morning guys...</p></div>
     <img src="/Qualminds-Training/SoftCopy.jpg" alt="Image is not Present" class="imge"><br>
@@ -25,7 +25,8 @@
         <button class="btn2"onclick="alert('Do you want to Update?')">Update</button>
         <button class="btn3"onclick="alert('Do you want to Save?')">Save</button>
         <button class="btn4"onclick="alert('Do you want to Delete?')">Delete</button>
-    </div>
+    </div><br><br>
+    <p class="hello">Hello my dear friends Thanks for visit......</p>
 
 </body>
 </html>
