--- a/JavaScript/Firstday.html
+++ b/JavaScript/Firstday.html
@@ -28,6 +28,12 @@
    <p id="p6"></p>
    <p id="p7"></p>
    <p id="p8"></p>
+   <p id="p9"></p>
+   <p id="p10"></p>
+   <p id="p11"></p>
+   <h1 id="p12"></h1>
+   <button type="button" onclick="time1()">Click me</button>
+   <!-- <button onclick="document.getElementById('p11').innerHTML=Date()">Time is!...</button> -->
    
 </body>
     <script src="FirstDay.js"></script>
