--- a/JavaScript/Object.html
+++ b/JavaScript/Object.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+
 </head>
 <body>
     <h1>Good morning</h1>
@@ -14,5 +14,6 @@
     <p id="d2"></p>
     <p id="d3"></p>
 </body>
-<script src="Object.js"></script>
+<script src="Object1.js" async type="text/javascript"></script>
+<script src="Object2.js" async type="text/javascript"></script>
 </html>
