--- a/HTML/RealAssignment.html
+++ b/HTML/RealAssignment.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/Qualminds-Training/CSS/RealAssignment.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://css.gg/search.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -19,69 +21,107 @@
         <li><a>RECIPES</a></li>
         <li><a>DRINKS</a></li>
         <li><a>DECORATIONS</a></li>
-        <li><a>ABOUT THE GRILLED PRAWN</a></li>
+        <li><a class="top1">ABOUT THE GRILLED PRAWN</a></li>
     </ul>
     <div class="parent">
         <div class="child1">
-            <img src="/vegan-baked-polenta.jpg" alt="" height="500px" width="1000px">
+            <img src="/MicrosoftTeams-image (2).png" alt="" height="500px" width="1000px">
         </div>
         <div class="child2">
             <h6>LATEST RECIPE</h6>
             <h3>Baked Polenta with Cheese and Mushrooms.</h3>
             <p class="exam">Polenta,goat cheese,Italiansausage,and cremini mushrooms.All together this will make for
                 pretty darn good side dish to a lovely salad.Go for it.</p>
-            <button>Go to recipe</button>
+            <button>Go to recipe
+                <i class="fa fa-long-arrow-right"></i>
+            </button>
         </div>
     </div>
     <h2>Our Recipes</h2>
     <div class="row1">
         <div class="filter-col1">
-            <p class="exam1">Filter Recipes by</p>
+            <p class="exam1">Filter Recipes by
+                <hr class="h1">
+            </p>
         </div>
         <div class="sort-col">
-            <label for="search" class="sort">Sort by</label>
-            <select name="search" id="search">
-                <option value="Newest First">Newest First</option>
-                <option value="Newest First">Newest First1</option>
-                <option value="Newest First">Newest First2</option>
-                <option value="Newest First">Newest First3</option>
-            </select>
+            <div>
+                <label for="search" class="sort">Sort by</label>
+                <select name="search" id="search">
+                    <option value="Newest First">Newest First</option>
+                    <option value="Newest First">Newest First1</option>
+                    <option value="Newest First">Newest First2</option>
+                    <option value="Newest First">Newest First3</option>
+                </select>
+            </div>
+            <div class="search-container">
+
+            </div>
+            <div class="search-icon">
+                <i class="fa fa-search"></i>
+            </div>
+            <form>
+                <div id="searchicon">
+
+                    <input type="text" placeholder="Search recipe">
+                </div>
+                <!-- <button type="submit"><i class="fa fa-search"></i></button> -->
+            </form>
         </div>
+
 
     </div>
     <div class="filter-col">
         <div class="filter-col2">
             <p class="food1">Food Type:</p>
             <ul class="nav1">
-                <li>Appetisers</li>
-                <li>Mains</li>
-                <li>Desserts</li>
-                <li>Special Occasions</li>
+                <input type="checkbox">
+                <label for="">Appetisers</label><br>
+                <input type="checkbox">
+                <label for="">Mains</label><br>
+                <input type="checkbox">
+                <label for="">Desserts</label><br>
+                <input type="checkbox">
+                <label for="">Special Occasions</label>
+                <div class="v1"></div>
             </ul>
         </div>
-        <div class="filter-col3">
+
+        <div class="nav1">
             <p class="food2">Nationality:</p>
-            <ul class="nav2">
-                <li>Italian(34)</li>
-                <li>French(30)</li>
-                <li>Spanish(22)</li>
-                <li>Peruvian(3)</li>
+            <ul>
+                <input type="checkbox">
+                <label for="">Italian(34)</label><br>
+                <input type="checkbox">
+                <label for="">French(30)</label><br>
+                <input type="checkbox">
+                <label for="">Spanish(22)</label><br>
+                <input type="checkbox">
+                <label for="">Peruvian(3)</label>
             </ul>
         </div>
-        <div class="filter-col4">
-            <ul class="nav3">
-                <li>Chinese(18)</li>
-                <li>Indian(13)</li>
-                <li>Thai(10)</li>
-                <li>Norwegian(4)</li>
+        <div class="nav2">
+            <ul>
+                <input type="checkbox">
+                <label for="">Chinese(18)</label><br>
+                <input type="checkbox">
+                <label for="">Indian(13)</label><br>
+                <input type="checkbox">
+                <label for="">Thai(10)</label><br>
+                <input type="checkbox">
+                <label for="">Norwegian(4)</label>
             </ul>
         </div>
-        <div class="filter-col5">
-            <ul class="nav4">
-                <li>Polish(2)</li>
-                <li>Danish(3)</li>
-                <li>Belgian(7)</li>
-                <li>Persian(13)</li>
+        <div class="nav2">
+            <ul>
+                <input type="checkbox">
+                <label for="">Polish(2)</label><br>
+                <input type="checkbox">
+                <label for="">Danish(3)</label><br>
+                <input type="checkbox">
+                <label for="">Belgian(7)</label><br>
+                <input type="checkbox">
+                <label for="">Persian(13)</label>
             </ul>
         </div>
     </div>
@@ -211,14 +251,21 @@
             </div>
         </div>
     </div>
-    <h5 class="head3">Return to the top ^</h5>
+    <h5 class="head3">Return to the top
+        <i class="fa fa-angle-up"></i>
+    </h5>
     <div class="lastcontent">
-        <div class="last1"><p>
-            Spread the word!
-        </p></div>
-        <div class="last2"><p>
-            Our recipes are awesome,sign up to our newsletter and</p><p>invite friends to join the Gilled Prawn cult
-        </p></div>
+        <div class="last1">
+            <p>
+                Spread the word!
+            </p>
+        </div>
+        <div class="last2">
+            <p>
+                Our recipes are awesome,sign up to our newsletter and</p>
+            <p>invite friends to join the Gilled Prawn cult
+            </p>
+        </div>
         <div class="box">
             <div class="box1">
                 <label for="Name">Name</label><br>
@@ -233,10 +280,12 @@
                 <input type="email" placeholder="Samantha@smith.com" class="input1">
             </div>
             <div class="box1">
-                <span>Remove</span>
+                <p class="remove1">
+                    <i class="fa fa-trash"></i> Remove
+                </p>
             </div>
         </div>
-        <!-- <hr> -->
+        <hr>
         <div class="boxes">
             <div class="box1">
                 <label for="Name">Name</label><br>
@@ -251,13 +300,47 @@
                 <input type="email" placeholder="george.stone@gmail.com" class="input1">
             </div>
             <div class="box1">
-                <button>Add Friend</button>
+                <button class="btn10">Add Friend</button>
             </div>
         </div>
         <label for=""></label>
         <div class="btn">
-            <button>Send-></button>
+            <button>Send
+                <i class="fa fa-long-arrow-right"></i>
+            </button>
         </div>
+
+    </div>
+    <div class="footer">
+        <div class="end1">
+            <p class="heading1">Our Recipes</p>
+            <p class="lastpara1">All our recipes are tested throughly by us to make sure they're suitabke for your
+                kitchen at home.We know many of you are concerned about healthy eating,so we send them to a qualified
+                nutritionist for through analysis too.</p>
+        </div>
+        <div class="end1">
+            <p class="heading1">Grilled Praw's History</p>
+            <p class="lastpara1">The Grilled Prawn is a frictional food blog created in January 2015.</p>
+        </div>
+        <div class="end1">
+            <p class="heading1">Tips and Tricks</p>
+            <p class="lastpara1">Not sure how to do something? Don't panic.We have plenty of tutorials for you. Learn
+                more</p>
+        </div>
+        <div class="end1">
+            <p class="heading1">Help and Tricks</p>
+            <p class="lastpara1">Struggling with one of the recipes?</p>
+            <p>Send us an email</p>
+            <p>We are always happy to try new things,send us your suggetions!</p>
+        </div>
+        <div class="end1">
+            <p class="heading1">@The Grilled Prawn</p>
+            <p class="lastpara1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error temporibus maiores
+                cupiditate? Quam fugiat natus sunt voluptatem temporibus quod enim sit blanditiis officia provident
+                deserunt, porro odio esse. Totam, eum.</p>
+            <p>The images and recipes ideas were taken from sponforkbacon.com and the icons from Google Material.</p>
+        </div>
+
     </div>
 
 </body>
