Responsive Web-form Creation

--- a/HTML/RealAssignment.html
+++ b/HTML/RealAssignment.html
@@ -6,26 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Qualminds-Training/CSS/RealAssignment.css">
+    <link rel="stylesheet" href="/CSS/RealAssignment.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://css.gg/search.css' rel='stylesheet'>
 </head>
 
 <body>
-    <ul class="nav">
-        <div class="img"><img src="/MicrosoftTeams-image (1).png" height="60px"></div>
-        <!-- <p class="para">The Grilled Prawn</p> -->
-        <div class="para">
-            <li><a>The Grilled Prawn</a></li>
+    <div class="header-row">
+        <div class="col-header">
+            <div class="img"><img src="/Image/MicrosoftTeams-image (1).png" height="60px"></div>
+            <!-- <div class="para"> -->
+            <div class="span-logo">
+                <p>The Grilled Prawn</p>
+            </div>
+            <!-- </div> -->
         </div>
-        <li><a>RECIPES</a></li>
-        <li><a>DRINKS</a></li>
-        <li><a>DECORATIONS</a></li>
-        <li><a class="top1">ABOUT THE GRILLED PRAWN</a></li>
-    </ul>
+        <div class="col-nav">
+            <ul>
+                <li><a>RECIPES</a></li>
+                <li><a>DRINKS</a></li>
+                <li><a>DECORATIONS</a></li>
+                <li><a class="top1">ABOUT THE GRILLED PRAWN</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="parent">
         <div class="child1">
-            <img src="/MicrosoftTeams-image (2).png" alt="" height="500px" width="1000px">
+            <img src="/Image/MicrosoftTeams-image (2).png" alt="" height="500px" width="1000px">
         </div>
         <div class="child2">
             <h6>LATEST RECIPE</h6>
@@ -54,9 +61,6 @@
                     <option value="Newest First">Newest First3</option>
                 </select>
             </div>
-            <div class="search-container">
-
-            </div>
             <div class="search-icon">
                 <i class="fa fa-search"></i>
             </div>
@@ -65,7 +69,6 @@
 
                     <input type="text" placeholder="Search recipe">
                 </div>
-                <!-- <button type="submit"><i class="fa fa-search"></i></button> -->
             </form>
         </div>
 
@@ -88,17 +91,19 @@
         </div>
 
         <div class="nav1">
-            <p class="food2">Nationality:</p>
-            <ul>
-                <input type="checkbox">
-                <label for="">Italian(34)</label><br>
-                <input type="checkbox">
-                <label for="">French(30)</label><br>
-                <input type="checkbox">
-                <label for="">Spanish(22)</label><br>
-                <input type="checkbox">
-                <label for="">Peruvian(3)</label>
-            </ul>
+            <div class="first1">
+                <p class="food2">Nationality:</p>
+                <ul>
+                    <input type="checkbox">
+                    <label for="">Italian(34)</label><br>
+                    <input type="checkbox">
+                    <label for="">French(30)</label><br>
+                    <input type="checkbox">
+                    <label for="">Spanish(22)</label><br>
+                    <input type="checkbox">
+                    <label for="">Peruvian(3)</label>
+                </ul>
+            </div>
         </div>
         <div class="nav2">
             <ul>
@@ -113,141 +118,155 @@
             </ul>
         </div>
         <div class="nav2">
-            <ul>
-                <input type="checkbox">
-                <label for="">Polish(2)</label><br>
-                <input type="checkbox">
-                <label for="">Danish(3)</label><br>
-                <input type="checkbox">
-                <label for="">Belgian(7)</label><br>
-                <input type="checkbox">
-                <label for="">Persian(13)</label>
-            </ul>
+            <div class="first2">
+                <ul>
+                    <input type="checkbox">
+                    <label for="">Polish(2)</label><br>
+                    <input type="checkbox">
+                    <label for="">Danish(3)</label><br>
+                    <input type="checkbox">
+                    <label for="">Belgian(7)</label><br>
+                    <input type="checkbox">
+                    <label for="">Persian(13)</label>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="maindish1">
         <div class="dish">
             <div class="spanleft">
-                <span>5TH MARCH 2016</span>
-                <span>THAI</span>
-                <p>Thai Yelow Curry Noodles with Shitake Mushrooms</p>
+                <div class="period"><span>5TH MARCH 2016</span>
+                    <span>THAI</span>
+                </div>
+                <h4>Thai Yelow Curry Noodles with Shitake Mushrooms</h4>
             </div>
             <div>
-                <img class="img1" src="/20130426-1304_untitled0051.jpg" alt="">
+                <img class="img1" src="/Image/20130426-1304_untitled0051.jpg" alt="">
             </div>
         </div>
         <div class="dish">
             <div class="spanleft">
-                <span>17TH MARCH 2016</span>
-                <span>ITALIAN</span>
-                <p>Cappellini with Cherry Tomatoes and Fresh basil</p>
+                <div class="period"><span>17TH MARCH 2016</span>
+                    <span>ITALIAN</span>
+                </div>
+                <h4>Cappellini with Cherry Tomatoes and Fresh basil</h4>
             </div>
             <div>
-                <img class="img1" src="/gettyimages-1081422898-612x612.jpg" alt="">
+                <img class="img1" src="/Image/gettyimages-1081422898-612x612.jpg" alt="">
             </div>
         </div>
         <div class="dish">
             <div class="spanleft">
-                <span>4TH APRIL 2016</span>
-                <span>ITALIAN</span>
-                <p>Baked Turkey Sausage and Mascarpone Stuffed Shells</p>
+                <div class="period"><span>4TH APRIL 2016</span>
+                    <span>ITALIAN</span>
+                </div>
+                <h4>Baked Turkey Sausage and Mascarpone Stuffed Shells</h4>
             </div>
             <div>
-                <img class="img1" src="/images.jpg" alt="">
+                <img class="img1" src="/Image/images.jpg" alt="">
             </div>
         </div>
         <div class="dish">
             <div class="spanleft">
-                <span>24TH MAY 2016</span>
-                <span>ITALIAN</span>
-                <p>Caramelised Apple and Herb Fiocchi</p>
+                <div class="period"><span>24TH MAY 2016</span>
+                    <span>ITALIAN</span>
+                </div>
+                <h4>Caramelised Apple and Herb Fiocchi</h4>
             </div>
             <div>
-                <img class="img1" src="/IndianFood_Main.jpg" alt="">
-            </div>
-        </div>
-    </div>
-    <div class="maindish2">
-        <div class="dish">
-            <div class="spanleft">
-                <span>25TH MAY 2016</span>
-                <span>SPANISH</span>
-                <p>Pumpkin Beer Cheese Soup</p>
-            </div>
-            <div>
-                <img class="img1" src="/istockphoto-1031354828-612x612.jpg" alt="">
-            </div>
-        </div>
-        <div class="dish">
-            <div class="spanleft">
-                <span>22TH SEPTEMBER 2016</span>
-                <span>THAI</span>
-                <p>Yum Woon Sen with Shrimp(Glass noodle salad with Shrimp)</p>
-            </div>
-            <div>
-                <img class="img1" src="/istockphoto-104704117-612x612.jpg" alt="">
-            </div>
-        </div>
-        <div class="dish">
-            <div class="spanleft">
-                <span>14TH OCTOBER 2016</span>
-                <span>THAI</span>
-                <p>Beef Satay</p>
-            </div>
-            <div>
-                <img class="img1" src="/istockphoto-1316145932-170667a.jpg" alt="">
-            </div>
-        </div>
-        <div class="dish">
-            <div class="spanleft">
-                <span>29TH OCTOBER 2016</span>
-                <span>FRENCH</span>
-                <p>Creamy French Onion Soup Dip in a Bread Bowl</p>
-            </div>
-            <div>
-                <img class="img1" src="/istockphoto-931308812-612x612.jpg" alt="">
+                <img class="img2" src="/Image/IndianFood_Main.jpg" alt="">
             </div>
         </div>
     </div>
-    <div class="maindish3">
+    <div class="maindish1">
         <div class="dish">
             <div class="spanleft">
-                <span>11TH NOVEMBER 2016</span>
-                <span>SPANISH</span>
-                <p>Bocadillo Bites</p>
+                <div class="period"><span>25TH MAY 2016</span>
+                    <span>SPANISH</span>
+                </div>
+                <h4>Pumpkin Beer Cheese Soup</h4>
             </div>
             <div>
-                <img class="img1" src="/pexels-chan-walrus-958545.jpg" alt="">
+                <img class="img1" src="/Image/istockphoto-1316145932-170667a.jpg" alt="">
             </div>
         </div>
         <div class="dish">
             <div class="spanleft">
-                <span>12TH NOVEMBER 2016</span>
-                <span>SPANISH</span>
-                <p>Paella</p>
+                <div class="period"><span>22TH SEPTEMBER 2016</span>
+                    <span>THAI</span>
+                </div>
+                <h4>Yum Woon Sen with</h4>
             </div>
             <div>
-                <img class="img1" src="/20130426-1304_untitled0051.jpg" alt="">
+                <img class="img2" src="/Image/istockphoto-104704117-612x612.jpg" alt="">
             </div>
         </div>
         <div class="dish">
             <div class="spanleft">
-                <span>24TH DECEMBER 2016</span>
-                <span>THAI</span>
-                <p>Spicy black Bean Burger</p>
+                <div class="period"><span>14TH OCTOBER 2016</span>
+                    <span>THAI</span>
+                </div>
+                <h4>Beef Satay</h4>
             </div>
             <div>
-                <img class="img1" src="/photo-1414235077428-338989a2e8c0.jpg" alt="">
+                <img class="img1" src="/Image/istockphoto-1316145932-170667a.jpg" alt="">
             </div>
         </div>
         <div class="dish">
             <div class="spanleft">
-                <span>9TH JANUARY 2016</span>
-                <span>ITALIAN</span>
-                <p>Fresh Fig and Pistachio Salad</p>
+                <div class="period"><span>29TH OCTOBER 2016</span>
+                    <span>FRENCH</span>
+                </div>
+                <h4>Creamy French Onion Soup Dip</h4>
             </div>
             <div>
-                <img class="img1" src="/photo-1600891964599-f61ba0e24092.jpg" alt="">
+                <img class="img1" src="/Image/istockphoto-931308812-612x612.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="maindish1">
+        <div class="dish">
+            <div class="spanleft">
+                <div class="period"><span>11TH NOVEMBER 2016</span>
+                    <span>SPANISH</span>
+                </div>
+                <h4>Bocadillo Bites</h4>
+            </div>
+            <div>
+                <img class="img1" src="/Image/pexels-chan-walrus-958545.jpg" alt="">
+            </div>
+        </div>
+        <div class="dish">
+            <div class="spanleft">
+                <div class="period"><span>12TH NOVEMBER 2016</span>
+                    <span>SPANISH</span>
+                </div>
+                <h4>Paella</h4>
+            </div>
+            <div>
+                <img class="img1" src="/Image/20130426-1304_untitled0051.jpg" alt="">
+            </div>
+        </div>
+        <div class="dish">
+            <div class="spanleft">
+                <div class="period"><span>24TH DECEMBER 2016</span>
+                    <span>THAI</span>
+                </div>
+                <h4>Spicy black Bean Burger</h4>
+            </div>
+            <div>
+                <img class="img2" src="/Image/photo-1414235077428-338989a2e8c0.jpg" alt="">
+            </div>
+        </div>
+        <div class="dish">
+            <div class="spanleft">
+                <div class="period"><span>9TH JANUARY 2016</span>
+                    <span>ITALIAN</span>
+                </div>
+                <h4>Fresh Fig and Pistachio Salad</h4>
+            </div>
+            <div>
+                <img class="img1" src="/Image/photo-1600891964599-f61ba0e24092.jpg" alt="">
             </div>
         </div>
     </div>
@@ -287,25 +306,25 @@
         </div>
         <hr>
         <div class="boxes">
-            <div class="box1">
+            <div class="box2">
                 <label for="Name">Name</label><br>
                 <input type="text" placeholder="George" class="input1">
             </div>
-            <div class="box1">
+            <div class="box2">
                 <label for="Surname">Surname</label><br>
                 <input type="text" placeholder="Stone" class="input1">
             </div>
-            <div class="box1">
+            <div class="box2">
                 <label for="Email">Email address</label><br>
                 <input type="email" placeholder="george.stone@gmail.com" class="input1">
             </div>
-            <div class="box1">
+            <div class="box2">
                 <button class="btn10">Add Friend</button>
             </div>
         </div>
         <label for=""></label>
         <div class="btn">
-            <button>Send
+            <button class="btn9">Send
                 <i class="fa fa-long-arrow-right"></i>
             </button>
         </div>
@@ -314,28 +333,28 @@
     <div class="footer">
         <div class="end1">
             <p class="heading1">Our Recipes</p>
-            <p class="lastpara1">All our recipes are tested throughly by us to make sure they're suitabke for your
+            <p>All our recipes are tested throughly by us to make sure they're suitabke for your
                 kitchen at home.We know many of you are concerned about healthy eating,so we send them to a qualified
                 nutritionist for through analysis too.</p>
         </div>
         <div class="end1">
             <p class="heading1">Grilled Praw's History</p>
-            <p class="lastpara1">The Grilled Prawn is a frictional food blog created in January 2015.</p>
+            <p>The Grilled Prawn is a frictional food blog created in January 2015.</p>
         </div>
         <div class="end1">
             <p class="heading1">Tips and Tricks</p>
-            <p class="lastpara1">Not sure how to do something? Don't panic.We have plenty of tutorials for you. Learn
-                more</p>
+            <p>Not sure how to do something? Don't panic.We have plenty of tutorials for you. <br><b>Learn
+                more</b></p>
         </div>
         <div class="end1">
             <p class="heading1">Help and Tricks</p>
-            <p class="lastpara1">Struggling with one of the recipes?</p>
-            <p>Send us an email</p>
+            <p>Struggling with one of the recipes?</p>
+            <p><b>Send us an email</b></p>
             <p>We are always happy to try new things,send us your suggetions!</p>
         </div>
         <div class="end1">
-            <p class="heading1">@The Grilled Prawn</p>
-            <p class="lastpara1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error temporibus maiores
+            <p class="heading1">&copy; The Grilled Prawn</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error temporibus maiores
                 cupiditate? Quam fugiat natus sunt voluptatem temporibus quod enim sit blanditiis officia provident
                 deserunt, porro odio esse. Totam, eum.</p>
             <p>The images and recipes ideas were taken from sponforkbacon.com and the icons from Google Material.</p>
