--- a/FormCreation.html
+++ b/FormCreation.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .main{
+            display: flex;
+        }
+    </style>
 </head>
 <body>
     <h2>Creation of a Form</h2>
@@ -50,11 +55,9 @@
         <option value="fiat">Fiat</option>
         <option value="audi">Audi</option>
         <option value="honda">Honda</option>
-
     </select><br>
     <input type="submit">
 </form><br><br>
-
 <h2>For Sending particular message:</h2>
 <form action="">
     <textarea name="message" id="message" cols="10" rows="10">The employees were on strike</textarea><br><br>
@@ -63,7 +66,8 @@
 <h2>For button type:</h2>
 <button onclick="alert('Hello World!')">Click me!</button><br><br>
 <form action="">
-    <fieldset>
+    <div class="main">
+    <fieldset style="width:50%;">
         <legend>Personalia</legend>
         <label for="fname">FirstName</label><br>
         <input type="text" id="fname" name="fname" value="Rambo"><br><br>
@@ -71,6 +75,24 @@
         <input type="text" id="lname" name="lname" value="Rahul"><br><br>
         <input type="submit" value="Submit">
     </fieldset>
+    <fieldset style="width:50%;">
+        <legend>Personalia</legend>
+        <label for="fname">FirstName</label><br>
+        <input type="text" id="fname" name="fname" value="Rambo"><br><br>
+        <label for="lname">LastName</label><br>
+        <input type="text" id="lname" name="lname" value="Rahul"><br><br>
+        <input type="submit" value="Submit">
+    </fieldset>
+</div>
+<fieldset>
+    <p><label for="fname" id="fname">First Name</label>
+    <input type="text" name="fname"></p>
+    <p>
+        <label for="lname" id="lname" >Last Name</label>
+        <input type="text" name="lname">
+    </p>
+    <button>Submit</button>
+</fieldset>
 </form>
 </body>
 </html>
