--- a/Training/AssignmentsByRameshSir/Html/index.html
+++ b/Training/AssignmentsByRameshSir/Html/index.html
@@ -21,7 +21,9 @@
                     <li><a href="#Home">HOME</a></li>
                     <li><a href="#About">ABOUT</a></li>
                     <li><a href="#Blog">BLOG</a></li>
-                    <li><a href="#Pages">PAGES</a></li>
+                    <li><a href="#Pages">PAGES
+                        <!-- <i class="arrow down"></i> -->
+                    </a></li>
                     <li><a href="#Contact">CONTACT</a></li>
                 </ul>
             </div>
@@ -57,7 +59,9 @@
     <section class="benefits">
         <div class="row2">
             <div class="box1">
-                <span class="lnr lnr-cog" style="font-size:42px;"></span>
+                <div class="m1">
+                    <span class="lnr lnr-cog" style="font-size:42px;"></span>
+                </div> 
                 <h4>Quality Service</h4>
                 <p>Vivamus a ligula quam. Dolor blandit eu leo non et init set ipsum corsec monec..</p>
             </div>
