--- a/Training/Responsive/HTML/beauty-salon.html
+++ b/Training/Responsive/HTML/beauty-salon.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../CSS/beauty-salon.css">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="heading">
+            <h1>Beauty Salon</h1>
+        </div>
+        <div class="nav-bar">
+            <a href="#Home">Home</a>
+        </div>
+    </nav>
+    <header>
+        <h1>Welcome</h1>
+        <p>to Slow Beauty Eco Salon,an Organic Beauty Salon in New York</p>
+        <div class="learn"><a href="#Learn">LEARN MORE</a></div>
+    </header><br>
+        <div class="box1">
+            <!-- <a href="" class="m1">
+                <span class="lnr lnr-cog" style="font-size:42px;"></span>
+            </a> -->
+            <div class="m1">
+                <span class="lnr lnr-cog" style="font-size:42px;"></span>
+            </div>
+                <h4>Quality Service</h4>
+                <p>Vivamus a ligula quam. Dolor blandit eu leo non et init set ipsum corsec monec..</p>
+        </div>
 </body>
 </html>
