--- a/Training/ActualTraining/Bootstrap/index.html
+++ b/Training/ActualTraining/Bootstrap/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi</h1>
+    <h1>Good Morning</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore consequatur quia consequuntur laboriosam labore impedit facilis iste laudantium quae molestiae a, illum nihil eligendi rem?</p>
 </body>
 </html>
