--- a/Training/ActualTraining/Bootstrap/index.html
+++ b/Training/ActualTraining/Bootstrap/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Good Morning</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore consequatur quia consequuntur laboriosam labore impedit facilis iste laudantium quae molestiae a, illum nihil eligendi rem?</p>
+    <h1>Hello, world!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem saepe nemo! Laboriosam quibusdam a id neque quo repellendus corporis!</p>
 </body>
 </html>
