--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <header>
         <div class="bg1">
@@ -15,17 +17,159 @@
             " height="auto">
         </div>
         <div class="nav">
-            <div class="studio"><p>STUDIO</p></div>
-            <div class="nav-icon"><p><i class="fa fa-bars"></i></p></div>
+            <div class="studio">
+                <p>STUDIO</p>
+            </div>
+            <div class="nav-icon">
+                <p><i class="fa fa-bars"></i></p>
+            </div>
         </div>
         <div class="header-content">
             <div class="work-hard">
                 <p>WE WORK HARD,WE PLAY HARD</p>
             </div>
             <div class="elegent">
-                <h1>We Create Elegant Solutions</h1>
+                <h1>We Create</h1>
+                <h1>Elegant Solutions</h1>
             </div>
         </div>
     </header>
+    <section class="pixels">
+        <div class="col">
+            <div class="icon">
+                <i class="fa fa-cloud" aria-hidden="true"></i>
+            </div>
+            <div class="pixel">
+                <h3>Pixel Perfect Design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium corrupti fuga molest cum ad
+                    earum?</p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="icon">
+                <i class="fa fa-cloud"></i>
+            </div>
+            <div class="pixel">
+                <h3>Full Documnetation</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium corrupti fuga molest cum ad
+                    earum?</p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="icon">
+                <i class="fa fa-cloud" aria-hidden="true"></i>
+            </div>
+            <div class="pixel">
+                <h3>Reasonable Pricing</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium corrupti fuga molest cum ad
+                    earum?</p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="icon">
+                <i class="fa fa-cloud" aria-hidden="true"></i>
+            </div>
+            <div class="pixel">
+                <h3>Happy clients</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium corrupti fuga molest cum ad
+                    earum?</p>
+            </div>
+        </div>
+    </section>
+    <section class="easy-way">
+        <div class="img1">
+            <img src="../Images/img1.png" alt="">
+        </div>
+        <div class="easy-ways">
+            <div class="smart">
+                <div class="easy">
+                    <p>Easy way to build perfect websites</p>
+                    <h3>Smart,Curious,Hands On.</h3>
+                </div>
+                <div class="lelit">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente id sed, adipisci asperiores
+                        sequi veniam fugit dolorem aspernatur mollitia necessitatibus ab pariatur assumenda, commodi
+                        quaerat maiores nam iste repellendus. At ea qui, officiis vitae libero et voluptatem illum?</p>
+                </div>
+            </div>
+            <div class="creative-clean">
+                <div class="creative">
+                    <h4>Creative Solutions</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates eveniet illo corporis. Est,
+                        quaerat dolore.</p>
+                </div>
+                <div class="clean">
+                    <h4>Clean code</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates eveniet illo corporis. Est,
+                        quaerat dolore.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="unique">
+        <div class="unique-digital">
+            <div class="img2">
+                <img src="../Images/img2.jpg" alt="">
+            </div>
+            <div class="young">
+                <div class="unique-digit">
+                    <p>Unique digital experiences</p>
+                </div>
+                <h3>We are a young and promising team</h3>
+                <div class="lorem">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa eum, laborum ad incidunt id
+                        saepe perspiciatis animi dolores quis quod maiores dolore fugit</p>
+                    <div class="a-tag"><a href="#">more</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="unique-digital">
+            <div class="img2">
+                <img src="../Images/img2.jpg" alt="">
+            </div>
+            <div class="young">
+                <div class="unique-digit">
+                    <p>Build perfect websites</p>
+                </div>
+                <h3>Our products simply provide the quality</h3>
+                <div class="lorem">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa eum, laborum ad incidunt id
+                        saepe perspiciatis animi dolores quis quod maiores dolore fugit</p>
+                    <div class="a-tag"><a href="#">more</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="find-more">
+        <p>Find more creative ideas for your projects</p>
+        <h3>Beautifull and easy to understand UI,professional animations and drag & drop</h3>
+    </div>
+    <section class="img-section">
+        <div class="imgs">
+            <img src="../Images/img4.jpg" alt="">
+        </div>
+        <div class="imgs">
+            <img src="../Images/img4.jpg" alt="">
+        </div>
+        <div class="imgs">
+            <img src="../Images/img4.jpg" alt="">
+        </div>
+        <div class="imgs">
+            <img src="../Images/img4.jpg" alt="">
+        </div>
+        <div class="imgs">
+            <img src="../Images/img4.jpg" alt="">
+        </div>
+        <div class="imgs">
+            <img src="../Images/img4.jpg" alt="">
+        </div>
+        <div class="imgs">
+            <img src="../Images/img4.jpg" alt="">
+        </div>
+        <div class="imgs">
+            <img src="../Images/img4.jpg" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
