--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
@@ -170,6 +170,100 @@
             <img src="../Images/img4.jpg" alt="">
         </div>
     </section>
+    <section class="values-features">
+        <div class="values">
+            <div class="values">
+                <p>Values & Features</p>
+            </div>
+            <div class="value-header">
+                <h3>Why you choose us?</h3>
+            </div>
+            <div class="list">
+                <ol>
+                    <li>Beautiful and easy to understand UI,professional animations</li>
+                    <li>Perfect design & clear code delivered</li>
+                    <li>Present your services with flexibleu a massa</li>
+                    <li>Find more creative ideas for your projects</li>
+                    <li>Unlimited power and customization possibilities</li>
+                </ol>
+            </div>
+        </div>
+        <div class="new-product-img">
+            <img src="../Images/img5.jpg" alt="">
+        </div>
+    </section>
+    <section class="awesome-skilled">
+        <div class="awesome-designers">
+            <div class="design-brand">
+                <p>We Design brand & digital experience</p>
+                <h3>Awesome & skilled Designers.</h3>
+            </div>
+            <div class="best-responsibility">
+                <div class="best-quality">
+                    <h4>Best Quality</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, itaque. Error, sed!</p>
+                </div>
+                <div class="best-quality responsibility">
+                    <h4>Responsibility</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni obcaecati</p>
+                </div>
+                <div class="best-quality">
+                    <h4>Processing Speed</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, itaque. Error, sed!</p>
+                </div>
+                <div class="best-quality responsibility">
+                    <h4>Lowest Prices</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta magni obcaecati</p>
+                </div>
+            </div>
+        </div>
+        <div class="awesome-img">
+            <img src="../Images/Screenshot 2022-09-23 112231.png" alt="" width="50%">
+        </div>
+    </section>
+    <section class="our-products">
+        <img src="../Images/img7.jpg" alt="" width="100%">
+        <div class="our-products-content">
+            <div class="we-value">
+                <p>We value your complaints about our services</p>
+                <h1>Our products simply provide the quality of being clear and easy to understand.</h1>
+            </div>
+        </div>
+    </section>
+    <section class="contact-map">
+        <div class="contact-us">
+            <h2>Contact Us</h2>
+            <p>3505th Ave,New York,Ny 10118 </p>
+            <p>1 212-736-3100</p>
+            <p>contacts@esbnyc.com</p>
+        </div>
+        <div class="maps">
+                <iframe src=
+    "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.2233913121413!2d77.4051603706222!3d28.50292593193056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce626851f7009%3A0x621185133cfd1ad1!2sGeeksforGeeks!5e0!3m2!1sen!2sin!4v1585040658255!5m2!1sen!2sin"
+                        width="400"
+                        height="420"
+                        frameborder="0"
+                        style="border:0;"
+                        allowfullscreen=""
+                        aria-hidden="false"
+                        tabindex="0">
+                </iframe>
+        </div>
+    </section>
+    <footer>
+        <div class="foot">
+            <h2>Headline</h2>
+            <p>Sample footer text</p>
+        </div>
+        <div class="foot">
+            <h2>Headline</h2>
+            <p>Sample footer text</p>
+        </div>
+        <div class="foot">
+            <h2>Headline</h2>
+            <p>Sample footer text</p>
+        </div>
+    </footer>
 </body>
 
 </html>
