Final Output Including Font-family

--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/HTML/index.html
@@ -222,7 +222,7 @@
         </div>
     </section>
     <section class="our-products">
-        <img src="../Images/img7.jpg" alt="" width="100%">
+        <img src="../Images/img7.jpg" alt="" width="100%" height="auto">
         <div class="our-products-content">
             <div class="we-value">
                 <p>We value your complaints about our services</p>
@@ -235,7 +235,7 @@
             <h2>Contact Us</h2>
             <p>3505th Ave,New York,Ny 10118 </p>
             <p>1 212-736-3100</p>
-            <p>contacts@esbnyc.com</p>
+            <p><a href="">contacts@esbnyc.com</a></p>
         </div>
         <div class="maps">
                 <iframe src=
@@ -265,5 +265,4 @@
         </div>
     </footer>
 </body>
-
 </html>
