--- a/Training/ActualTraining/Bootstrap/index.html
+++ b/Training/ActualTraining/Bootstrap/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<style>
+    div{
+        border: 1px solid black;
+    }
+</style>
 </head>
 <body>
-    <h1>Good Morning</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore consequatur quia consequuntur laboriosam labore impedit facilis iste laudantium quae molestiae a, illum nihil eligendi rem?</p>
+    <div class="container">
+    <div class="row">
+        <div class="col-2 col-sm-6 col-xl-3">Hi</div>
+        <div class="col-6 col-sm-6 col-xl-3 offset-xl-2">Hi</div>
+        <div class="col-2 col-md-3">Hi</div> 
+        <div class="col col-md-3">Hi</div>
+    </div>
+    </div>
 </body>
 </html>
